...
  }

  return (
    <ThemedView style={[styles.container, { paddingTop: insets.top + 16, paddingBottom: insets.bottom }]}>
      <ThemedView style={styles.header}>
        <ThemedView>
          <ThemedText type="title" style={styles.headerTitle}>Projetos</ThemedText>
          <ThemedText style={[styles.headerSubtitle, { color: themeColors.muted }]}>
            Organize suas ideias
          </ThemedText>
        </ThemedView>
        <ThemedView style={styles.headerButtons}>
          <TouchableOpacity
...
